--- a/AngularProject/angular-tour-of-heroes/src/app/heroes/heroes.component.html
+++ b/AngularProject/angular-tour-of-heroes/src/app/heroes/heroes.component.html
@@ -1,5 +1,7 @@
 <h2>My Heroes</h2>
 <ul>
-  <li *ngFor="let hero of heroes"></li>
+  <li *ngFor="let hero of heroes">
+    <span>{{hero.id}}</span>{{hero.name}}
+  </li>
 </ul>
 
