--- a/AngularProject/angular-dragEcharts/src/app/main/main.component.html
+++ b/AngularProject/angular-dragEcharts/src/app/main/main.component.html
@@ -7,30 +7,32 @@
   <div class="left">
     <button>按钮</button>
   </div>
-  <div class="center">
+  <div class="center" [ngStyle]="areaStyle">
   </div>
   <div class="right">
     <div class="rightHead">画布设置</div>
     <hr>
     <div>
       <label>宽度：</label>
-      <input type="text">
+      <input type="text" [(ngModel)]="area.width">
     </div>
     <div>
       <label>高度：</label>
-      <input type="text">
+      <input type="text" [(ngModel)]="area.height">
     </div>
     <div>
       <label>背景色：</label>
-      <input type="text">
+      <input type="color" [(ngModel)]="area.backgroundColor">
     </div>
     <div>
       <label>背景图：</label>
-      <button style="background-color: #008040">上传</button>
-      <button>取消</button>
+      <label class="upload-btn" for="file1">上传</label>
+      <input type="file" #file1 id="file1" accept="*.png" (change)="imgSelect($event)">
+      <input type="button" value="取消" (click)="clearImg()">
     </div>
     <div>
-      <button style="background-color: #007acc">确定</button>
+      <button style="background-color: #007acc" (click)="areaChange()">确定</button>
+      <button style="background-color: #007acc" (click)="areaReset()">重置</button>
     </div>
   </div>
   <div style="clear: both">
